<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		xmlns:tools="http://schemas.android.com/tools"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:background="@color/dark"
		tools:context=".QuestionnaireActivity">

	<ImageView
			android:id="@+id/btn_back_questionnaire"
			android:layout_width="40dp"
			android:layout_height="40dp"
			android:layout_marginStart="10dp"
			android:layout_marginTop="24dp"
			android:background="@drawable/ic_arrow"
			android:backgroundTint="@color/white"
			android:contentDescription="@string/blank"
			android:rotation="180"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent" />

	<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:gravity="center"
			android:orientation="vertical"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent">

		<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginStart="20dp"
				android:layout_marginTop="40dp"
				android:layout_marginEnd="20dp"
				android:fontFamily="@font/regular"
				android:letterSpacing="0.03"
				android:text="@string/card_text_1"
				android:textColor="@color/white"
				android:textSize="16sp" />

		<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginStart="20dp"
				android:layout_marginEnd="20dp"
				android:fontFamily="@font/bold"
				android:letterSpacing="0.03"
				android:lineSpacingMultiplier="1.3"
				android:text="@string/questions"
				android:textColor="@color/white"
				android:textSize="40sp" />

		<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:layout_marginStart="20dp"
				android:layout_marginEnd="20dp"
				android:orientation="horizontal">

			<ProgressBar
					android:id="@+id/pb_progress"
					style="?android:attr/progressBarStyleHorizontal"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:indeterminate="false"
					android:max="3"
					android:minHeight="50dp"
					android:paddingTop="15dp"
					android:paddingBottom="10dp"
					android:progress="1"
					android:theme="@style/ProgressBarStyle" />

			<TextView
					android:id="@+id/tv_progress_current"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:fontFamily="@font/bold"
					android:padding="15dp"
					android:paddingEnd="0dp"
					android:text="@string/process"
					android:textColor="@color/white"
					android:textColorHint="@color/white"
					android:textSize="20sp"
					tools:ignore="RtlSymmetry" />

			<TextView
					android:id="@+id/tv_progress_total"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:fontFamily="@font/regular"
					android:text="@string/out_of"
					android:textColor="@color/white"
					android:textColorHint="@color/white"
					android:textSize="14sp" />
		</LinearLayout>

		<androidx.cardview.widget.CardView
				android:layout_width="match_parent"
				android:layout_height="425dp"
				android:layout_marginStart="20dp"
				android:layout_marginEnd="20dp"
				android:background="@color/white"
				app:cardCornerRadius="8dp"
				app:cardElevation="5dp">

			<ScrollView
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:overScrollMode="never">

				<LinearLayout
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:orientation="vertical"
						android:padding="15dp">

					<TextView
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:fontFamily="@font/regular"
							android:letterSpacing="0.03"
							android:lineSpacingMultiplier="1.3"
							android:paddingStart="20dp"
							android:paddingTop="15dp"
							android:paddingEnd="20dp"
							android:paddingBottom="15dp"
							android:text="@string/hash_tags"
							android:textColor="@color/gray"
							android:textSize="13sp" />

					<TextView
							android:id="@+id/tv_question"
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:fontFamily="@font/bold"
							android:letterSpacing="0.03"
							android:lineSpacingMultiplier="1.2"
							android:paddingStart="20dp"
							android:paddingTop="10dp"
							android:paddingEnd="20dp"
							android:paddingBottom="10dp"
							android:text="@string/q1"
							android:textColor="@color/dark"
							android:textSize="30sp" />

					<TextView
							android:id="@+id/tv_description"
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:fontFamily="@font/regular"
							android:letterSpacing="0.03"
							android:lineSpacingMultiplier="1.3"
							android:paddingStart="20dp"
							android:paddingTop="15dp"
							android:paddingEnd="20dp"
							android:paddingBottom="15dp"
							android:text="@string/d1"
							android:textColor="#5E667B"
							android:textSize="20sp" />

					<LinearLayout
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:gravity="center"
							android:orientation="horizontal">
						<Button
								android:id="@+id/btn_no"
								android:layout_width="130dp"
								android:layout_height="wrap_content"
								android:layout_margin="15dp"
								android:backgroundTint="@color/dark"
								android:onClick="clickedButton"
								android:padding="10dp"
								android:text="@string/no"
								tools:ignore="ButtonStyle" />
						<Button
								android:id="@+id/btn_yes"
								android:layout_width="130dp"
								android:layout_height="wrap_content"
								android:layout_margin="15dp"
								android:backgroundTint="@color/dark"
								android:onClick="clickedButton"
								android:padding="10dp"
								android:text="@string/yes"
								tools:ignore="ButtonStyle" />
					</LinearLayout>
				</LinearLayout>
			</ScrollView>
		</androidx.cardview.widget.CardView>
	</LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>